Reserve rooms filter added to dropdown

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -39,7 +39,7 @@
     <%= event.room_id %>
   </p>
   <p>
-    <strong>Rood location:</strong>
+    <strong>Room location:</strong>
     <%= event.room.room_loc %>
   </p>
 
