added admin record

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,12 +3,10 @@
 <p>Purchase event tickets at the snap of your finger</p>
 <% if current_user %>
   Hello <%= current_user.name %>.
-<!--  <%#= link_to 'Add credit card', new_credit_card_path %><br>-->
+  <%= link_to 'View all event', events_path %><br>
+  <%= link_to 'View event history', event_tickets_path %><br>
   <%= link_to "Logout", logout_path %>
-<!--  <%#= link_to 'View all products', products_path %><br>-->
-<!--  <%#= link_to 'View purchase history', transactions_path %><br>-->
 <% else %>
   <%= link_to "Signup", signup_path %> or
   <%= link_to "Login", login_path %>
-
 <% end %>
