--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,17 @@
 <p id=”notice”><%= notice %></p>
 <h1>Wolf Events</h1>
 <p>Purchase event tickets at the snap of your finger</p>
-<% if current_user %>
+<% if current_admin %>
+  Hello <%= current_admin.name %>.
+  <%= link_to 'View all event', events_path %><br>
+<!--  <%#= link_to 'View event history', event_tickets_path %><br>-->
+  <%= link_to "Logout", logout_path %>
+<% elsif current_user %>
   Hello <%= current_user.name %>.
   <%= link_to 'View all event', events_path %><br>
   <%= link_to 'View event history', event_tickets_path %><br>
   <%= link_to "Logout", logout_path %>
-<% else %>
+<% else %>>
   <%= link_to "Signup", signup_path %> or
   <%= link_to "Login", login_path %>
 <% end %>
