--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -10,5 +10,8 @@
     </p>
   <% end %>
 </div>
-
-<%= link_to "New event", new_event_path %>
+<% if current_admin %>
+    <%= link_to "New event", new_event_path %>
+<% elsif !current_admin %>
+  <p>You are not authorized to creat a new event.</p>
+<% end %>>
