--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,15 +3,22 @@
 <h1>Events</h1>
 
 <div id="events">
-  <% @events.each do |event| %>
-    <%= render event %>
-    <p>
-      <%= link_to "Show this event", event %>
-    </p>
-  <% end %>
+    <table>
+      <tr>
+        <th>ID</th>
+        <th>Event Name</th>
+        <th>Event Link</th>
+      </tr>
+      <% @events.each do |event| %>
+      <tr>
+        <td><%= event.__id__ %></td>
+        <td><%= event.event_name %></td>
+        <td><%= link_to "Show this event", event %></td>
+      </tr>
+      <% end %>
+    </table>
 </div>
 <% if current_admin %>
     <%= link_to "New event", new_event_path %>
-<% elsif !current_admin %>
-  <p>You are not authorized to creat a new event.</p>
 <% end %>>
+<%= link_to "Home Page", root_path %>
