--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,13 @@
 <h1>Wolf Events</h1>
 <p>Purchase event tickets at the snap of your finger</p>
 <% if current_admin %>
-  Hello <%= current_admin.name %>.
-  <%= link_to 'View all event', events_path %><br>
+  Hello <%= current_admin.name %><br>
+  <%= link_to 'View your profile', admin_path(current_admin) %><br>
+  <%= link_to 'View all events', events_path %><br>
+  <%= link_to 'View all attendees', attendees_path %><br>
+  <%= link_to 'View all event tickets', event_tickets_path %><br>
+  <%= link_to 'View all rooms', rooms_path %><br>
+  <%= link_to 'View all reviews', reviews_path %><br>
   <%= link_to "Logout", logout_path %>
 <% elsif current_user %>
     Hello <%= current_user.name %>.
