--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,6 +10,6 @@
     <%= button_to "Destroy this event", @event, method: :delete %>
   <% end %>
   <% if current_user %>
-    <%= link_to "Sign up for this event", event_ticket_path(@event) %>
+    <%= link_to "Sign up for this event", new_event_ticket_path(event_id: @event.id) %>
   <% end %>
 </div>
