--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,8 @@
 <% elsif current_user %>
     Hello <%= current_user.name %>.
     <%= link_to 'View all event', events_path %><br>
+    <%= link_to 'View upcoming event', upcoming_events_events_path %><br>
+    <%= link_to 'View occured events', past_events_events_path %><br>
     <%= link_to 'View event history', event_tickets_path %><br>
     <%= link_to "Logout", logout_path %>
 <% else %>>
