added auhtorization for events, user profiles and rooms

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,7 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Rooms</h1>
-
 <div id="rooms">
     <table>
       <tr>
@@ -20,5 +19,5 @@
       <% end %>
     </table>
 </div>
-
-<%= link_to "New room", new_room_path %>
+<%= link_to "New room", new_room_path %><br>
+<%= link_to "Back to Home Page", root_path %><br>
