--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -3,8 +3,10 @@
 <%= render @attendee %>
 
 <div>
-  <%= link_to "Edit this attendee", edit_attendee_path(@attendee) %> |
-  <%= link_to "Back to attendees", attendees_path %>
-
-  <%= button_to "Destroy this attendee", @attendee, method: :delete %>
+  <%= link_to "Edit this attendee", edit_attendee_path(@attendee) %> <br><br>
+  <% if current_admin %>
+    <%= link_to "Back to attendees", attendees_path %> <br><br>
+  <% end %>
+  <%= button_to "Destroy this attendee", @attendee, method: :delete %> <br>
+  <%= link_to "Back to Home Page", root_path %> <br><br>
 </div>
