--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <p id=”notice”><%= notice %></p>
+
 <h1>Wolf Events</h1>
 <p>Purchase event tickets at the snap of your finger</p>
 <% if current_admin %>
@@ -11,7 +12,8 @@
   <%= link_to 'View all reviews', reviews_path %><br>
   <%= link_to "Logout", logout_path %>
 <% elsif current_user %>
-    Hello <%= current_user.name %>.
+    Hello <%= current_user.name %><br>
+    <%= link_to 'View your profile', attendee_path(current_user) %><br>
     <%= link_to 'View all event', events_path %><br>
     <%= link_to 'View event history', event_tickets_path %><br>
     <%= link_to "Logout", logout_path %>
