--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,8 @@
     <%= link_to 'View upcoming event', upcoming_events_events_path %><br>
     <%= link_to 'View occured events', past_events_events_path %><br>
     <%= link_to 'View event history', event_tickets_path %><br>
+    <%= link_to 'View attended events', attended_event_reviews_path %><br>
+    <%= link_to 'View all reviews', reviews_path %><br>
     <%= link_to "Logout", logout_path %>
 <% else %>>
     <%= link_to "Signup", signup_path %> or
