--- a/app/views/event_tickets/index.html.erb
+++ b/app/views/event_tickets/index.html.erb
@@ -1,18 +1,40 @@
-<p style="color: green"><%= notice %></p>
+<h1>Event Tickets</h1>
 
-<h1>Your Event Tickets</h1>
+<%= form_tag(event_tickets_path, method: :get) do %>
+  <div class="field">
+    <%= label_tag :event_id, "Event ID" %>
+    <%= text_field_tag :event_id, params[:event_id] %>
+  </div>
 
-<div id="event_tickets">
-  <% current_user.attended_events.each do |attended_event| %>
+  <div class="field">
+    <%= label_tag :attendee_id, "Attendee ID" %>
+    <%= text_field_tag :attendee_id, params[:attendee_id] %>
+  </div>
 
-    <% attended_event.event_tickets.each do |event_ticket| %>
-      <h2><%= attended_event.event_name %></h2>
-      <%= render event_ticket %>
-      <p>
-        <%= link_to "Show this event ticket", event_ticket %>
-      </p>
-    <% end %>
+  <%= submit_tag "Filter" %>
+<% end %>
+
+<table>
+  <thead>
+  <tr>
+    <th>Event ID</th>
+    <th>Attendee ID</th>
+    <th>Room ID</th>
+    <th>Confirmation Number</th>
+    <!-- Other event ticket attributes -->
+  </tr>
+  </thead>
+  <tbody>
+  <% @event_tickets.each do |event_ticket| %>
+    <tr>
+      <td><%= event_ticket.event.event_name %></td>
+      <td><%= event_ticket.attendee.name %></td>
+      <td><%= event_ticket.room_id %></td>
+      <td><%= event_ticket.confirmation_num %></td>
+      <!-- Display other event ticket attributes -->
+    </tr>
   <% end %>
-</div>
+  </tbody>
+</table>
 
-<%= link_to "New event ticket", new_event_ticket_path %>
+<%= link_to "Back to Home Page", root_path %>
