--- a/app/views/attendees/index.html.erb
+++ b/app/views/attendees/index.html.erb
@@ -21,5 +21,5 @@
 </div>
 <% if current_admin %>
     <%= link_to "New attendee", new_attendee_path %>
-<% end %>
+<% end %> <br>
 <%= link_to "Home Page", root_path %>
