--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -7,6 +7,10 @@
   <% if current_admin %>
     <%= link_to "Back to attendees", attendees_path %> <br><br>
   <% end %>
-  <%= button_to "Destroy this attendee", @attendee, method: :delete %> <br>
-  <%= link_to "Back to Home Page", root_path %> <br><br>
+  <% if current_admin %>
+    <%= button_to "Remove Attendee", @attendee, method: :delete %> <br>
+  <% else %>
+    <%= button_to "Delete Account", @attendee, method: :delete %> <br>
+  <% end %>
+    <%= link_to "Back to Home Page", root_path %> <br><br>
 </div>
