--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
     <%= link_to 'View your profile', attendee_path(current_user) %><br>
     <%= link_to 'View all event', events_path %><br>
     <%= link_to 'View upcoming event', upcoming_events_events_path %><br>
-    <%= link_to 'View occured events', past_events_events_path %><br>
+    <%= link_to 'View past events', past_events_events_path %><br>
     <%= link_to 'Book event tickets', new_event_ticket_path %><br>
     <%= link_to 'View event history', event_tickets_path %><br>
     <%= link_to 'View all reviews', reviews_path %><br>
