--- a/app/views/event_tickets/_event_ticket.html.erb
+++ b/app/views/event_tickets/_event_ticket.html.erb
@@ -1,8 +1,20 @@
 <div id="<%= dom_id event_ticket %>">
 
-  <p>
+
+    <p><strong>Event Name: </strong>
+      <%= event_ticket.event.event_name %>
+    </p>
+
+    <p><strong>Event Room: </strong>
+      <%= event_ticket.room.room_loc %>
+    </p>
+
+    <p><strong>Event Date:</strong>
+      <%= event_ticket.event.event_date %></p>
+    <p>
+
     <strong>Confirmation num:</strong>
     <%= event_ticket.confirmation_num %>
-  </p>
+    </p>
 
 </div>
