--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,11 +14,10 @@
 <% elsif current_user %>
     Hello <%= current_user.name %><br>
     <%= link_to 'View your profile', attendee_path(current_user) %><br>
-    <%= link_to 'View all event', events_path %><br>
-    <%= link_to 'View upcoming event', upcoming_events_events_path %><br>
+    <%= link_to 'View all events', events_path %><br>
+    <%= link_to 'View upcoming event to book tickets', upcoming_events_events_path %><br>
     <%= link_to 'View past events', past_events_events_path %><br>
-    <%= link_to 'Book event tickets', new_event_ticket_path %><br>
-    <%= link_to 'View event history', event_tickets_path %><br>
+    <%= link_to 'View your booking history', event_tickets_path %><br>
     <%= link_to 'View all reviews', reviews_path %><br>
     <%= link_to "Logout", logout_path %>
 <% else %>>
