--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,7 @@
     <%= link_to "Edit this event", edit_event_path(@event) %>
     <%= button_to "Destroy this event", @event, method: :delete %>
   <% end %>
-  <% if current_user %>
+  <% if current_user && @event.event_start_time > DateTime.now() %>
     <%= link_to "Sign up for this event", new_event_ticket_path(event_id: @event.id) %>
   <% end %>
 </div>
