updated event seats reduction logic

--- a/app/views/event_tickets/_event_ticket.html.erb
+++ b/app/views/event_tickets/_event_ticket.html.erb
@@ -17,4 +17,8 @@
     <%= event_ticket.confirmation_num %>
     </p>
 
+    <strong>Number of Tickets purchased:</strong>
+    <%= event_ticket.num_of_seats %>
+    </p>
+
 </div>
