--- a/app/views/event_tickets/_form.html.erb
+++ b/app/views/event_tickets/_form.html.erb
@@ -93,9 +93,8 @@
     <%= @event.no_of_seats %></p>
   </div>
   <div class="field">
-    <% no_of_seats = @event.no_of_seats %>
-    <%= form.label :no_of_seats %>
-    <%= form.number_field :quantity, :id => 'no_of_seats', min: 1, max: no_of_seats, onchange: "calculateTotalPrice();" %>
+    <%= form.label :num_of_seats %>
+    <%= form.number_field :num_of_seats, :id => 'num_of_seats', min: 1, max: @event.no_of_seats, onchange: "calculateTotalPrice();" %>
   </div>
 
   <div class="field">
@@ -112,7 +111,7 @@
 <script type="text/javascript">
       function calculateTotalPrice() {
         var price = "<%= @event.ticket_price %>";
-        document.getElementById('total_cost').value = document.getElementById('no_of_seats').value * price;
+        document.getElementById('total_cost').value = document.getElementById('num_of_seats').value * price;
     }
 </script>
 
