--- a/app/views/event_tickets/index.html.erb
+++ b/app/views/event_tickets/index.html.erb
@@ -23,6 +23,7 @@
     <th>Room ID</th>
     <th>Confirmation Number</th>
     <th>No. of tickets purchased</th>
+    <th>Ticket Link</th>
     <!-- Other event ticket attributes -->
   </tr>
   </thead>
@@ -35,6 +36,7 @@
       <td><%= event_ticket.room_id %></td>
       <td><%= event_ticket.confirmation_num %></td>
       <td><%= event_ticket.num_of_seats %></td>
+      <td><%= link_to "Ticket", event_ticket_path(event_ticket) %></td>
       <!-- Display other event ticket attributes -->
     </tr>
   <% end %>
