--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -11,7 +11,7 @@
       </tr>
       <% @rooms.each do |room| %>
       <tr>
-        <td><%= room.__id__ %></td>
+        <td><%= room.id %></td>
         <td><%= room.room_loc %></td>
         <td><%= room.room_cap %></td>
         <td><%= link_to "Show this room", room %></td>
