--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -3,7 +3,7 @@
 <%= render @admin %>
 
 <div>
-  <%= link_to "Edit this admin", edit_admin_path(@admin) %> |
-  <%= link_to "Back to admins", admins_path %>
-  <%= link_to "Back to Home Page", root_path %>
+  <%= link_to "Edit this admin", edit_admin_path(@admin), class: 'button-style' %> |
+  <%= link_to "Back to admins", admins_path, class: 'button-style' %> |
+  <%= link_to "Back to Home Page", root_path, class: 'button-style' %>
 </div>
