--- a/app/views/attendees/_form.html.erb
+++ b/app/views/attendees/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="form-container">
 <%= form_with(model: attendee) do |form| %>
   <% if attendee.errors.any? %>
     <div style="color: red">
@@ -11,37 +12,38 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="form-field-block">
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
 
-  <div>
+  <div class="form-field-block">
     <%= form.label :email, style: "display: block" %>
     <%= form.text_field :email %>
   </div>
 
-  <div>
+  <div class="form-field-block">
     <%= form.label :password, style: "display: block" %>
-    <%= form.text_field :password %>
+    <%= form.password_field :password %>
   </div>
 
-  <div>
+  <div class="form-field-block">
     <%= form.label :phone, style: "display: block" %>
     <%= form.text_field :phone %>
   </div>
 
-  <div>
+  <div class="form-field-block">
     <%= form.label :address, style: "display: block" %>
     <%= form.text_field :address %>
   </div>
 
-  <div>
+  <div class="form-field-block">
     <%= form.label :credit_card, style: "display: block" %>
     <%= form.text_field :credit_card %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="form-field-block">
+    <%= form.submit class: 'styled-submit-button'%>
   </div>
 <% end %>
+</div>
