--- a/app/views/attendees/new.html.erb
+++ b/app/views/attendees/new.html.erb
@@ -1,14 +1,12 @@
-<h1>New attendee</h1>
-
-<%= render "form", attendee: @attendee %>
-
-<br>
-
-<div>
-  <% if current_admin %>
-    <%= link_to "Back to attendees", attendees_path %>
-  <% else %>
-    <%= link_to "Home Page", root_path %>
-  <% end %>
+<div class="form-container">
+  <h1>New attendee</h1>
+  <%= render "form", attendee: @attendee %><br>
+  <div>
+    <% if current_admin %>
+      <%= link_to "Back to attendees", attendees_path, class: 'button-style' %>
+    <% end %>
+    <%= link_to "Home Page", root_path, class: 'button-style' %>
+  </div>
 </div>
+
 
