--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -3,14 +3,14 @@
 <%= render @attendee %>
 <p><strong>User ID:</strong> <%= @attendee.id %></p>
 <div>
-  <%= link_to "Edit this attendee", edit_attendee_path(@attendee) %> <br><br>
+  <%= link_to "Edit this attendee", edit_attendee_path(@attendee), class: 'button-style' %> <br><br>
   <% if current_admin %>
-    <%= link_to "Back to attendees", attendees_path %> <br><br>
+    <%= link_to "Back to attendees", attendees_path, class: 'button-style' %> <br><br>
   <% end %>
   <% if current_admin %>
-    <%= button_to "Remove Attendee", @attendee, method: :delete %> <br>
+    <%= button_to "Remove Attendee", @attendee, method: :delete, class: 'button-style' %> <br>
   <% else %>
-    <%= button_to "Delete Account", @attendee, method: :delete %> <br>
+    <%= button_to "Delete Account", @attendee, method: :delete, class: 'button-style' %> <br>
   <% end %>
-    <%= link_to "Back to Home Page", root_path %> <br><br>
+    <%= link_to "Back to Home Page", root_path, class: 'button-style' %> <br><br>
 </div>
