--- a/app/views/event_tickets/show.html.erb
+++ b/app/views/event_tickets/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @event_ticket %>
 
 <div>
-  <%= link_to "Edit this event ticket", edit_event_ticket_path(@event_ticket) %> |
-  <%= link_to "Back to event tickets", event_tickets_path %>
+  <%= link_to "Edit this event ticket", edit_event_ticket_path(@event_ticket), class: 'button-style' %> |
+  <%= link_to "Back to event tickets", event_tickets_path, class: 'button-style' %>
 
-  <%= button_to "Destroy this event ticket", @event_ticket, method: :delete %>
+  <%= button_to "Destroy this event ticket", @event_ticket, method: :delete, class: 'button-style' %>
 </div>
