--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this event", @event %> |
-  <%= link_to "Back to events", events_path %>
+  <%= link_to "Show this event", @event, class: 'button-style' %> |
+  <%= link_to "Back to events", events_path, class: 'button-style' %>
 </div>
