--- a/app/views/events/upcoming_events.html.erb
+++ b/app/views/events/upcoming_events.html.erb
@@ -16,4 +16,4 @@
   <p>No upcoming events available.</p>
 <% end %>
 
-<%= link_to 'Back to Home', root_path %>
+<%= link_to 'Back to Home', root_path, class: 'button-style' %>
