--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this room", @room %> |
-  <%= link_to "Back to rooms", rooms_path %>
+  <%= link_to "Show this room", @room, class: 'button-style' %> |
+  <%= link_to "Back to rooms", rooms_path, class: 'button-style' %>
 </div>
