--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -3,7 +3,9 @@
 <%= render @review %>
 
 <div>
-  <%= link_to "Edit this review", edit_review_path(@review) %> |
+  <% if @review.attendee_id == current_user.id %>
+    <%= link_to "Edit this review", edit_review_path(@review) %> |
+  <% end %>
   <%= link_to "Back to reviews", reviews_path %>
 
   <%= button_to "Destroy this review", @review, method: :delete %>
